Added support for multiple devices. Working for iPhone 6 and iPad.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
         </div>
     </div>
 
-    <div id="device-container" class="container device-iphone6">
-        <iframe id="iframeTopBanner" class="changeURLOfThis" scrolling="no" frameborder="0" src="http://localhost:9090/godt.html" style="width: 100%; height: 100%; padding: 0px; border-width: 0px;"></iframe>
+    <div id="super-container">
+        <div id="device-container" class="container device-iphone6">
+            <iframe id="iframeTopBanner" class="changeURLOfThis" scrolling="no" frameborder="0" src="http://localhost:9090/godt.html" style="width: 100%; height: 100%; padding: 0px; border-width: 0px;"></iframe>
+        </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
