--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         </div>
     </div>
 
+    <div id="validURLModal" class="modal">
+        <p>Please specify a valid URL</p>
+    </div>
+
     <div id="super-container">
         <div id="device-container" class="container device-iphone6">
             <iframe id="iframeTopBanner" class="changeURLOfThis" scrolling="no" frameborder="0" src="http://localhost:9090/godt.html" style="width: 100%; height: 100%; padding: 0px; border-width: 0px;"></iframe>
